[project]
name = "CARLA"
version = "0.0.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "protobuf<=3.21",
    "lime==0.2.0.1",
        "mip==1.12.0",
        "numpy>=1.26.0",
        "pandas>=2.2.3",
        "recourse==1.0.0",
        "scikit-learn>=1.6.1",
        "tensorflow>=2.14.0",
        "torch>=2.7.0",
        "torchvision>=0.22.0",
        "h5py>=3.11.0",
        "dice-ml>=0.9",
        "ipython",
        "keras>=2.3.0",
        "xgboost>=3.0.2",
        "causalgraphicalmodels==0.0.4",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["carla"]

